cleaned up code. changed cursor to something more fancy and locked it when you're in a-frame. added 3d text showing the a-frame user they have won

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -44,3 +44,8 @@ body{
     transition: 0.7s opacity;
     cursor: default;
 }
+
+.a-canvas.a-grab-cursor:active, .a-grabbing
+{
+    cursor: none;
+}
